oxiplate-derive/tests/crates/unreachable/tests/broken/unicode/second-char-invalid.stderr
error: Internal Oxiplate error: Failed to parse unicode escape. Expected `[0-9a-f]`.
 --> tests/broken/unicode/second-char-invalid.rs:5:23
  |
5 | #[oxiplate_inline("/u{g")]
  |                       ^
  |
  = help: Please open an issue: https://github.com/0b10011/oxiplate/issues/new?title=Failed+to+parse+unicode+escape
  = help: Include template that caused the issue.

error: proc-macro derive panicked
 --> tests/broken/unicode/second-char-invalid.rs:4:10
  |
4 | #[derive(Oxiplate)]
  |          ^^^^^^^^
  |
  = help: message: internal error: entered unreachable code: Internal Oxiplate error. See previous error for more information.

error[E0277]: `Data` doesn't implement `std::fmt::Display`
 --> tests/broken/unicode/second-char-invalid.rs:9:18
  |
9 |     print!("{}", Data);
  |             --   ^^^^ `Data` cannot be formatted with the default formatter
  |             |
  |             required by this formatting parameter
  |
  = help: the trait `std::fmt::Display` is not implemented for `Data`
  = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
  = note: this error originates in the macro `$crate::format_args` which comes from the expansion of the macro `print` (in Nightly builds, run with -Z macro-backtrace for more info)
